feat(weather): location ticket add

--- a/weather-app/src/app/location/location.component.html
+++ b/weather-app/src/app/location/location.component.html
@@ -1,7 +1,8 @@
-<p>
-  location works!
-</p>
-{{city}}
-{{country}}
-{{temperature}}
-{{status}}
+<div class="weather-ticket">
+  <div>
+    <h2>{{city}}</h2>
+    <p>{{country}}</p>
+  </div>
+  <h1>{{temperature}} °C</h1>
+  <p>{{status}}</p>
+</div>
