--- a/weather-app/src/app/location/location.component.html
+++ b/weather-app/src/app/location/location.component.html
@@ -1,8 +1,10 @@
-<div class="weather-ticket">
+<h2>My Locations</h2>
+
+<div *ngFor="let location of locations" class="weather-ticket">
   <div>
-    <h2>{{city}}</h2>
-    <p>{{country}}</p>
+    <h2>{{location.city}}</h2>
+    <p>{{location.country}}</p>
   </div>
-  <h1>{{temperature}} °C</h1>
-  <p>{{status}}</p>
+  <h1>{{location.temperature}} °C</h1>
+  <p>{{location.status}}</p>
 </div>
