--- a/weather-app/src/app/location/location.component.html
+++ b/weather-app/src/app/location/location.component.html
@@ -4,6 +4,7 @@
 <div *ngFor="let location of locations" class="weather-ticket">
   <div>
     <h2>{{location.city}}</h2>
+    <p>Hello</p>
     <p>{{location.country}}</p>
   </div>
   <h1>{{location.temperature}} °C</h1>
